# braintrace

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  changelog.md  codecov.yml  conftest.py  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI-daily.yml  CI.yml  Publish.yml  deploy-docs.yml
brainscale/: __init__.py  _etrace_graph_executor.py
brainscale/_etrace_vjp/: base.py  d_rtrl.py  d_rtrl_test.py  esd_rtrl.py  esd_rtrl_test.py  graph_executor.py  hybrid.py  misc.py
braintrace/: __init__.py  __init___test.py  _compatible_imports.py  _compatible_imports_test.py  _compile.py  _compile_test.py  _docs_examples_test.py  _etrace_algorithms.py  _etrace_algorithms_test.py  _etrace_compiler_base.py  _etrace_compiler_graph.py  _etrace_compiler_hid_param_op.py  _etrace_compiler_hidden_group.py  _etrace_compiler_hidden_group_test.py  _etrace_compiler_hidden_pertubation.py  _etrace_compiler_module_info.py  _etrace_concepts.py  _etrace_graph_executor.py  _etrace_graph_executor_test.py  _etrace_input_data.py  _etrace_model_test.py  _etrace_operators.py  _etrace_operators_test.py  _grad_exponential.py  _grad_exponential_test.py  _input_data.py  _misc.py  _misc_test.py  _state_managment.py  _state_managment_test.py  _typing.py  _version.py  api_contract_test.py  legacy_deprecation_test.py
braintrace/_algorithm/: __init__.py  _common.py  _common_test.py  base.py  base_test.py  d_rtrl.py  d_rtrl_test.py  e_prop.py  e_prop_test.py  graph_executor.py  graph_executor_test.py  io_dim_vjp.py  io_dim_vjp_test.py  oracle.py  oracle_models.py  oracle_test.py  ostl.py  ostl_test.py  osttp.py  osttp_test.py  otpe.py  otpe_test.py  ottt.py  ottt_test.py  param_dim_vjp.py  param_dim_vjp_test.py  pp_prop.py  pp_prop_test.py  vjp_base.py  vjp_base_test.py  vjp_graph_executor.py
braintrace/_compiler/: __init__.py  base.py  base_test.py  canonicalize.py  canonicalize_test.py  diagnostics.py  diagnostics_test.py  graph.py  graph_test.py  hid_param_op.py  hid_param_op_test.py  hidden_group.py  hidden_group_test.py  hidden_pertubation.py  hidden_pertubation_test.py  jaxpr_graph.py  jaxpr_graph_test.py  model4test.py  module_info.py  module_info_test.py  report.py  report_test.py  scan_descent.py  scan_descent_test.py  scenario_catalog.py  scenario_catalog_test.py
braintrace/_etrace_algorithms/: __init__.py  _common.py  _common_test.py  approx_correctness_test.py  base.py  base_test.py  conv_vmap_correctness_test.py  cross_check_test.py  d_rtrl.py  d_rtrl_test.py  diagnostic_exploration_test.py  e_prop.py  e_prop_test.py  exact_correctness_test.py  graph_executor.py  integration_test.py  io_dim_vjp.py  io_dim_vjp_test.py  misc.py  misc_test.py  oracle.py  oracle_models.py  oracle_test.py  ostl.py  ostl_test.py  osttp.py  osttp_test.py  otpe.py  otpe_test.py  ottt.py  ottt_test.py  param_dim_vjp.py  param_dim_vjp_test.py  pp_prop.py  pp_prop_test.py  public_api_test.py  scan_fusion_test.py  vjp_base.py  vjp_base_test.py  vjp_graph_executor.py  (+1 more)
braintrace/_etrace_compiler/: __init__.py  base.py  base_test.py  compiler_oracle_test.py  compiler_property_test.py  diagnostics.py  diagnostics_test.py  graph.py  graph_test.py  hid_param_op.py  hid_param_op_test.py  hidden_group.py  hidden_group_test.py  hidden_pertubation.py  hidden_pertubation_test.py  model4test.py  module_info.py  module_info_test.py  primitive_spec_test.py  report.py  report_test.py  scenario_catalog.py  scenario_catalog_test.py
braintrace/_etrace_op/: __init__.py  _primitive.py  _primitive_test.py  _registries.py  _registries_test.py  _spec.py  _spec_test.py  bias_gradient_test.py  conv.py  conv_test.py  dense.py  dense_test.py  elemwise.py  elemwise_test.py  lora.py  lora_test.py  op_rule_oracle_test.py  separate_param_state_test.py  sparse.py  sparse_test.py
braintrace/_etrace_vjp/: __init__.py  base.py  base_test.py  d_rtrl.py  d_rtrl_test.py  esd_rtrl.py  graph_executor.py  graph_executor_test.py  hybrid.py  hybrid_test.py  misc.py  misc_test.py  pp_prop.py  pp_prop_test.py
braintrace/_legacy/: __init__.py  _legacy_test.py  _ops.py  _ops_test.py  _params.py  _params_test.py
braintrace/_op/: __init__.py  _primitive.py  _primitive_test.py  _registries.py  _registries_test.py  conv.py  conv_test.py  dense.py  dense_test.py  einsum.py  einsum_test.py  elemwise.py  elemwise_test.py  embedding.py  embedding_test.py  grouped.py  grouped_test.py  lora.py  lora_test.py  op_rule_oracle.py  op_rule_oracle_test.py  sparse.py  sparse_test.py
braintrace/_snn_algorithms/: __init__.py  _common.py  _common_test.py  cross_check_test.py  e_prop.py  e_prop_test.py  integration_test.py  ostl.py  ostl_test.py  osttp.py  osttp_test.py  otpe.py  otpe_test.py  ottt.py  ottt_test.py  public_api_test.py
braintrace/etp/: __init__.py  _algorithms.py  _compiler.py  _compiler_test.py  _executor.py  _functions.py  _graph.py  _graph_compilation_test.py  _primitives.py  _primitives_test.py  example_minimal.py
braintrace/nn/: __init__.py  _conv.py  _conv_test.py  _embedding.py  _embedding_test.py  _linear.py  _linear_test.py  _normalizations.py  _normalizations_test.py  _readout.py  _readout_test.py  _rnn.py  _rnn_test.py
docs/: Makefile  compiler_design.md  conf.py  highlight_lexer.py  index.rst
docs/advanced/: IR_analysis-en.ipynb  IR_analysis-zh.ipynb  compiler_internals.ipynb  custom_algorithms.ipynb  limitations-en.ipynb  limitations-zh.ipynb  limitations.ipynb  online_algorithm_customization-en.ipynb  online_algorithm_customization-zh.ipynb
docs/apis/: algorithms.rst  compiler.rst  concepts.rst  index.rst  nn.rst  primitives.rst
docs/examples/: core_examples.rst
docs/quickstart/: concepts-en.ipynb  (+8 more)
examples/: 000-lif-snn-for-nmnist.py  001-gif-snn-for-dms.py  002-coba-ei-rsnn.py  003-snn-memory-and-speed-evaluation-all.py  003-snn-memory-and-speed-evaluation-batched.py  003-snn-memory-and-speed-evaluation-vmap.py  004-feedforward-conv-snn.py  100-gru-on-copying-task.py  101-integrator-rnn.py  README.md  snn_models.py
(+87 files in other folders)
