[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
exclude = [
    "dev*",
    "docs*",
    "temp*",
    "tests*",
    "examples*",
    "build*",
    "dist*",
    "dev*",
    "braintrace.egg-info*",
    "braintrace/__pycache__*",
    "braintrace/__init__.py",
]


[tool.setuptools.dynamic]
version = { attr = "braintrace._version.__version__" }


[project]
name = "braintrace"
description = "Enabling Scalable Online Learning for Brain Dynamics."
readme = "README.md"
license = { text = "Apache-2.0 license" }
requires-python = ">=3.11"
authors = [{ name = "BrainTrace Developers", email = "chao.brain@qq.com" }]
keywords = [
    "computational neuroscience",
    "brain-inspired computing",
    "brain modeling",
    "online learning",
]
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "brainstate>=0.2.2",
    "brainunit",
    "brainstate",
    "brainpy-state",
    "braintools",
]
dynamic = ["version"]


[project.urls]
"Homepage" = "https://github.com/chaobrain/braintrace"
"Bug Tracker" = "https://github.com/chaobrain/braintrace/issues"
"Documentation" = "https://brainx.chaobrain.com/braintrace/"
"Source Code" = "https://github.com/chaobrain/braintrace"


[project.optional-dependencies]
cpu = ["jax[cpu]"]
cuda12 = ["jax[cuda12]"]
cuda13 = ["jax[cuda13]"]
tpu = ["jax[tpu]"]
testing = ["pytest", "jax[cpu]", "hypothesis"]
dev = ["pytest", "jax[cpu]", "hypothesis", "mypy>=1.8", "build"]


[tool.setuptools.package-data]
braintrace = ["py.typed"]


[tool.pytest.ini_options]
# Marker vocabulary (test-strategy design section 11). `diagnostic` is random
# hypothesis exploration that broadens the curated matrix; it MUST NOT gate CI
# red/green, so `addopts` deselects it by default. Run it on demand with
# `-m diagnostic` (overrides the default `-m` expression); run everything with
# `-o addopts=""`.
markers = [
    "slow: heavy combinations (e.g. double-leading vmap x deep x float64); opt-in",
    "diagnostic: hypothesis random exploration; deselected by default, does not gate CI",
    "oracle: compares an online algorithm's gradient against the BPTT oracle",
    "xfail_known: pins a known finding (F-xx) documented in dev/superpowers/findings",
]
addopts = "-m 'not diagnostic'"


[tool.mypy]
python_version = "3.11"
files = ["braintrace"]
# Test files, test-only helpers, and non-shipped sources are not part of the
# typed public surface and are excluded from release type checking.
exclude = '''(?x)(
    _test\.py$
    | model4test\.py$
    | scenario_catalog\.py$
)'''
# These None-defaulted parameters are genuinely optional throughout the
# codebase; treat them as Optional rather than rewriting 39 signatures.
implicit_optional = true
# Keep `# type: ignore` honest, but only require error codes (not blanket).
warn_redundant_casts = true
no_implicit_reexport = false

# Third-party scientific deps that ship without inline types or a py.typed
# marker. Scoped per-module so missing stubs here never mask errors in our
# own code. brainunit DOES ship types, so it is intentionally absent.
[[tool.mypy.overrides]]
module = [
    "brainstate.*",
    "braintools.*",
    "brainpy.*",
    "brainevent.*",
    "numba.*",
]
ignore_missing_imports = true
